--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.0|^8.1|^8.2",
-        "illuminate/contracts": "^8.37|^9.0|^10.0",
+        "illuminate/contracts": "^10.0|^11.0",
         "kitloong/laravel-app-logger": "^1.0",
         "spatie/laravel-package-tools": "^1.4.3",
         "ext-json": "*"
